fix the Day and night auto shift and added an experience section

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -135,10 +135,12 @@
 @layer components {
   .section-container {
     @apply flex-shrink-0 overflow-hidden relative;
+    padding-top: 2rem;
   }
   @media (min-width: 768px) {
     .section-container {
       @apply w-screen h-screen;
+      padding-top: 3.5rem;
     }
   }
   @media (max-width: 767px) {
